# SharePyCrud

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  dev-requirements.txt  main.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.legagy.py  setup.py  update_version_badge.py
.github/workflows/: python-app.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LOGGING.md  README.md  index.md  requirements.txt  setup.md
examples/: create_folder.py  download_file.py  get_drive_id.py  get_folder_content.py  list_drives.py  list_sites.py
examples/read_operations/: download_file.py  get_drive_id.py  get_folder_content.py  list_drives.py  list_sites.py
examples/write_operations/: create_folder.py  nested_folder_file_upload.py
src/: __init__.py  config.py  sharepoint_client.py  utils.py
src/sharepycrud/: __init__.py  auth.py  baseClient.py  client.py  clientFactory.py  config.py  createClient.py  logger.py  loggerConfig.py  readClient.py  utils.py
tests/: test_auth.py  test_baseClient.py  test_client.py  test_clientFactory.py  test_config.py  test_createClient.py  test_logger.py  test_readClient.py  test_utils.py  type_fixture.py
